Z-Index Bug Fixed

--- a/clint/src/components/navbar/Navbar.css
+++ b/clint/src/components/navbar/Navbar.css
@@ -145,7 +145,7 @@ justify-content: space-between;
 .dropDown{
   right: 4%!important;
   top: 10%!important;
-  
+  z-index: 100;
 }
 
 .profileDown:hover{
